Fix Build Errors

--- a/CommunityToolkit.Maui.Markup/CommunityToolkit.Maui.Markup.csproj
+++ b/CommunityToolkit.Maui.Markup/CommunityToolkit.Maui.Markup.csproj
@@ -2,6 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<TargetFrameworks>net6.0-ios;net6.0-android;net6.0-maccatalyst</TargetFrameworks>
+    <IsPackable>false</IsPackable>
 		<UseMaui>true</UseMaui>
 	</PropertyGroup>
 	<PropertyGroup>
