--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -20,6 +20,10 @@ jobs:
         with:
           dotnet-version: '6.0.x'
           include-prerelease: true
+
+      - name: Install .NET MAUI Workload
+        run: |
+          dotnet workload install maui
         
       - name: Restore NuGet 
         run: |
