Enable `dotnet pack`

--- a/src/CommunityToolkit.Maui.Markup/CommunityToolkit.Maui.Markup.csproj
+++ b/src/CommunityToolkit.Maui.Markup/CommunityToolkit.Maui.Markup.csproj
@@ -2,7 +2,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<TargetFrameworks>net6.0-ios;net6.0-android;net6.0-maccatalyst</TargetFrameworks>
-		<IsPackable>false</IsPackable>
 		<UseMaui>true</UseMaui>
 	</PropertyGroup>
 	<PropertyGroup>
@@ -40,5 +39,8 @@
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="mdoc" Version="5.8.3" PrivateAssets="all" />
+	</ItemGroup>
+	<ItemGroup>
+	  <None Include="icon.png" Pack="true" PackagePath=""/>
 	</ItemGroup>
 </Project>
