--- a/.github/workflows/Samples.yaml
+++ b/.github/workflows/Samples.yaml
@@ -31,7 +31,7 @@ jobs:
 
         - name: Build
           run: |
-            dotnet build ./samples/
+            dotnet build ./samples/ -c Release
 
     Build_Sample_Windows:
       runs-on: windows-latest
