--- a/.github/workflows/CommunityToolkit.Maui.Markup.yaml
+++ b/.github/workflows/CommunityToolkit.Maui.Markup.yaml
@@ -1,4 +1,4 @@
-name: Unit Tests
+name: CommunityToolkit.Maui.Markup
 
 on:
   push:
@@ -9,7 +9,7 @@ on:
       - "*"
 
 jobs:
-    Build_macOS:
+    Build_Library_macOS:
       runs-on: macos-latest
 
       steps:
@@ -23,7 +23,7 @@ jobs:
 
         - name: Install .NET MAUI Workload
           run: |
-            dotnet workload install maui
+            dotnet workload install maui 
           
         - name: Restore NuGet 
           run: |
@@ -31,11 +31,11 @@ jobs:
 
         - name: Build
           run: |
-            dotnet build ./src/
+            dotnet build ./src/ -c Release
 
     UnitTest_macOS:
       runs-on: macos-latest
-      needs: Build_macOS
+      needs: Build_Library_macOS
 
       steps:
       - uses: actions/checkout@v1
@@ -61,7 +61,7 @@ jobs:
           
           dotnet test  -c Release $UnitTestProject
 
-    Build_Windows:
+    Build_Library_Windows:
       runs-on: windows-latest
 
       steps:
@@ -83,11 +83,11 @@ jobs:
 
         - name: Build 
           run: |
-            dotnet build ./src/
+            dotnet build ./src/ -c Release
 
     UnitTest_Windows:
       runs-on: macos-latest
-      needs: Build_Windows
+      needs: Build_Library_Windows
 
       steps:
       - uses: actions/checkout@v1
