--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -89,7 +89,7 @@ jobs:
   - job: build_macos
     displayName: Build macOS Library
     pool:
-      vmImage: macos-10.15
+      vmImage: macos-latest
     steps:
       # if this is a tagged build, then update the version number
       - powershell: |
@@ -116,7 +116,7 @@ jobs:
         displayName: 'Build Community Toolkit'
         inputs:
           script: 'dotnet build $(PathToCommunityToolkitCsproj) -c Release'
-      # Doesn't seem to work (yet)?
+      # Doesn't work (yet) https://github.com/dotnet/maui/issues/2112
       # - task: DotNetCoreCLI@2
       #   displayName: 'Run Unit Tests'
       #   inputs:
