--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,6 @@ trigger:
   branches:
     include:
     - main
-    - develop
   tags:
     include:
     - '*'
@@ -26,7 +25,6 @@ pr:
   branches:
     include:
     - main
-    - develop
   paths:
     exclude:
     - README.md
@@ -36,7 +34,7 @@ schedules:
   displayName: Daily midnight build
   branches:
     include:
-    - develop
+    - main
 
 jobs:      
   - job: build_windows
