--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,7 +6,8 @@ variables:
   NET_VERSION: '6.0.x'
   RunPoliCheck: 'false'
   PathToSolution: 'src/CommunityToolkit.Maui.Markup.sln'
-  PathToCommunityToolkitCsproj: 'src/CommunityToolkit.Maui.Markup/CommunityToolkit.Maui.Markup.csproj'
+  PathToSample: 'src/CommunityToolkit.Maui.Markup/CommunityToolkit.Maui.Markup.csproj'
+  PathToCommunityToolkitCsproj: 'samples/CommunityToolkit.Maui.Markup.Sample/CommunityToolkit.Maui.Markup.Sample.csproj'
   PathToCommunityToolkitUnitTestCsproj: 'src/CommunityToolkit.Maui.Markup.UnitTests/CommunityToolkit.Maui.Markup.UnitTests.csproj'
 
 trigger:
@@ -74,6 +75,10 @@ jobs:
         inputs:
           script: 'dotnet build $(PathToCommunityToolkitCsproj) -c Release'
       - task: CmdLine@2
+        displayName: 'Build Community Toolkit Sample'
+        inputs:
+          script: 'dotnet build $(PathToSample) -c Release'
+      - task: CmdLine@2
         displayName: Pack Community Toolkit NuGets
         inputs:
           script: 'dotnet pack -c Release $(PathToCommunityToolkitCsproj) -p:PackageVersion=$(NugetPackageVersion) --output $(Build.ArtifactStagingDirectory)/nuget'
@@ -114,6 +119,10 @@ jobs:
         displayName: 'Build Community Toolkit'
         inputs:
           script: 'dotnet build $(PathToCommunityToolkitCsproj) -c Release'
+      - task: CmdLine@2
+        displayName: 'Build Community Toolkit Sample'
+        inputs:
+          script: 'dotnet build $(PathToSample) -c Release'
       # Doesn't work yet https://github.com/dotnet/maui/issues/2112
       # - task: DotNetCoreCLI@2
       #   displayName: 'Run Unit Tests'
