--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -85,13 +85,12 @@ jobs:
         displayName: 'Build Community Toolkit Sample'
         inputs:
           script: 'dotnet build $(PathToSample) -c Release'
-      # `dotnet test` does not yet support optional workloads https://github.com/dotnet/sdk/issues/21845#issuecomment-943270826
       - task: CmdLine@2
         displayName: 'Run Unit Tests'
         inputs:
           script: |
             dotnet build $(PathToCommunityToolkitUnitTestCsproj) -c Release
-            :: dotnet test $(PathToCommunityToolkitUnitTestCsproj) -c Release
+            dotnet test $(PathToCommunityToolkitUnitTestCsproj) -c Release
       - task: CmdLine@2
         displayName: Pack Community Toolkit NuGets
         inputs:
@@ -151,13 +150,12 @@ jobs:
         displayName: 'Build Community Toolkit Sample'
         inputs:
           script: 'dotnet build $(PathToSample) -c Release'
-      # `dotnet test` does not yet support optional workloads https://github.com/dotnet/sdk/issues/21845#issuecomment-943270826
       - task: CmdLine@2
         displayName: 'Run Unit Tests'
         inputs:
           script: |
             dotnet build $(PathToCommunityToolkitUnitTestCsproj) -c Release
-            # dotnet test $(PathToCommunityToolkitUnitTestCsproj) -c Release
+            dotnet test $(PathToCommunityToolkitUnitTestCsproj) -c Release
       - task: CmdLine@2
         displayName: 'Pack CommunityToolkit NuGets'
         inputs:
