--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,6 @@ variables:
   PathToSample: 'samples/CommunityToolkit.Maui.Markup.Sample/CommunityToolkit.Maui.Markup.Sample.csproj'
   PathToCommunityToolkitCsproj: 'src/CommunityToolkit.Maui.Markup/CommunityToolkit.Maui.Markup.csproj'
   PathToCommunityToolkitUnitTestCsproj: 'src/CommunityToolkit.Maui.Markup.UnitTests/CommunityToolkit.Maui.Markup.UnitTests.csproj'
-  XcodeVersion: '13.0_beta'
 
 trigger:
   branches:
@@ -23,7 +22,7 @@ trigger:
     - README.md
 
 pr:
-  autoCancel: true
+  autoCancel: 'true'
   branches:
     include:
     - main
@@ -48,8 +47,6 @@ jobs:
         displayName: 'Install .NET SDK'
         inputs:
           version: '$(NET_VERSION)'
-          includePreviewVersions: true
-
       - task: CmdLine@2
         displayName: 'Install .NET MAUI workload'
         inputs:
@@ -85,13 +82,12 @@ jobs:
         displayName: 'Build Community Toolkit Sample'
         inputs:
           script: 'dotnet build $(PathToSample) -c Release'
-      # `dotnet test` does not yet support optional workloads https://github.com/dotnet/sdk/issues/21845#issuecomment-943270826
       - task: CmdLine@2
         displayName: 'Run Unit Tests'
         inputs:
           script: |
             dotnet build $(PathToCommunityToolkitUnitTestCsproj) -c Release
-            :: dotnet test $(PathToCommunityToolkitUnitTestCsproj) -c Release
+            dotnet test $(PathToCommunityToolkitUnitTestCsproj) -c Release
       - task: CmdLine@2
         displayName: Pack Community Toolkit NuGets
         inputs:
@@ -116,7 +112,7 @@ jobs:
   - job: build_macos
     displayName: Build macOS Library
     pool:
-      vmImage: macos-11
+      vmImage: macos-latest
     steps:
       # if this is a tagged build, then update the version number
       - powershell: |
@@ -130,11 +126,6 @@ jobs:
         displayName: 'Install .NET SDK'
         inputs:
           version: $(NET_VERSION)
-          includePreviewVersions: true    
-      - task: CmdLine@2
-        displayName: 'Set Xcode Version'
-        inputs:
-          script: echo '##vso[task.setvariable variable=MD_APPLE_SDK_ROOT;]'/Applications/Xcode_$(XcodeVersion).app;sudo xcode-select --switch /Applications/Xcode_$(XcodeVersion).app/Contents/Developer
       - task: CmdLine@2
         displayName: 'Install .NET MAUI workload'
         inputs:
@@ -151,13 +142,12 @@ jobs:
         displayName: 'Build Community Toolkit Sample'
         inputs:
           script: 'dotnet build $(PathToSample) -c Release'
-      # `dotnet test` does not yet support optional workloads https://github.com/dotnet/sdk/issues/21845#issuecomment-943270826
       - task: CmdLine@2
         displayName: 'Run Unit Tests'
         inputs:
           script: |
             dotnet build $(PathToCommunityToolkitUnitTestCsproj) -c Release
-            # dotnet test $(PathToCommunityToolkitUnitTestCsproj) -c Release
+            dotnet test $(PathToCommunityToolkitUnitTestCsproj) -c Release
       - task: CmdLine@2
         displayName: 'Pack CommunityToolkit NuGets'
         inputs:
