--- a/src/CommunityToolkit.Maui.Markup/CommunityToolkit.Maui.Markup.csproj
+++ b/src/CommunityToolkit.Maui.Markup/CommunityToolkit.Maui.Markup.csproj
@@ -4,7 +4,8 @@
 		<TargetFramework>net6.0</TargetFramework>
 		<UseMaui>true</UseMaui>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
-	</PropertyGroup>
+        <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
+  </PropertyGroup>
 
 	<PropertyGroup>
 		<GitInfoReportImportance>high</GitInfoReportImportance>
