Move EnforceCodeStyleInBuild out to build.props

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -9,5 +9,7 @@
 		<WarningsAsErrors>nullable,CS1574,CS1573,CS137</WarningsAsErrors>
 		<ProduceReferenceAssembly>True</ProduceReferenceAssembly>
 		<GenerateErrorForMissingTargetingPacks>false</GenerateErrorForMissingTargetingPacks>
+
+        <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
 	</PropertyGroup>
 </Project>
