Include readme.txt and repo readme details

--- a/src/CommunityToolkit.Maui.Markup/CommunityToolkit.Maui.Markup.csproj
+++ b/src/CommunityToolkit.Maui.Markup/CommunityToolkit.Maui.Markup.csproj
@@ -36,6 +36,7 @@
 
 	<ItemGroup>
 	    <None Include="icon.png" Pack="true" PackagePath="" />
+		<None Include="ReadMe.txt" pack="true" PackagePath="." />
 	</ItemGroup>
 
 </Project>
