Add `CommunityToolkit.Mvvm` NuGet Package

--- a/samples/CommunityToolkit.Maui.Markup.Sample/CommunityToolkit.Maui.Markup.Sample.csproj
+++ b/samples/CommunityToolkit.Maui.Markup.Sample/CommunityToolkit.Maui.Markup.Sample.csproj
@@ -43,10 +43,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
-        <PackageReference Include="AsyncAwaitBestPractices.MVVM" Version="6.0.4" />
         <PackageReference Include="Polly" Version="7.2.3" />
         <PackageReference Include="Refit" Version="6.3.2" />
 				<PackageReference Include="CommunityToolkit.Maui" Version="1.0.0-pre8" />
+        <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0-preview2" />
 	</ItemGroup>
 
 	<ItemGroup>
