--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -158,10 +158,12 @@ jobs:
         displayName: 'Set Xcode Version'
         inputs:
           script: echo '##vso[task.setvariable variable=MD_APPLE_SDK_ROOT;]'/Applications/Xcode_$(XcodeVersion).app;sudo xcode-select --switch /Applications/Xcode_$(XcodeVersion).app/Contents/Developer
-      - task: UseDotNet@2
-        displayName: 'Install .NET SDK'
+      - task: CmdLine@2
+        displayName: Install .NET 6.0.300-preview.22204.3
         inputs:
-          version: $(NET_VERSION)
+          script: |
+            curl -sSL https://dot.net/v1/dotnet-install.sh | bash /dev/stdin --version 6.0.300-preview.22204.3 --quality preview
+            dotnet --version
       - task: CmdLine@2
         displayName: 'Install .NET MAUI workload'
         inputs:
